# ascend

./: .dockerignore  .gitignore  README.md  cypress.config.js  docker-compose.dev.yml  docker-compose.reverse-proxy.yml  docker-compose.yml  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vbak.ps1  vres.ps1  vres.sh
.github/: CODEOWNERS  mergeable.yml
.github/workflows/: auto-approve.yml  backend-deploy.yml
app/: globals.css  layout.tsx  page.tsx
apps/api/: README.md
apps/mobile/: README.md
apps/mobile/dummy_cross/rust/: Cargo.toml
apps/mobile/dummy_cross/rust/src/: frb_generated.rs  lib.rs
apps/mobile/dummy_cross/rust/src/bindings/: ffi.rs  wasm.rs
apps/mobile/dummy_cross/rust/src/models/: file.rs  user.rs
apps/mobile/dummy_cross/rust/src/services/: notification.rs
apps/realtime-server/: package-lock.json  package.json
apps/web/: README.md
components/: Footer.tsx  Navbar.tsx  NotificationCard.tsx  ProfileCard.tsx  SettingsCard.tsx
cypress/e2e/: Authentication.cy.js  CSSLocators.cy.js  CompanyPages.cy.js  Connections-Networkig.cy.js  Jobs_Hiring.cy.js  Messeging_Directcom.cy.js  MyFirstTst.cy.js  Newseed.cy.js  Notifications.cy.js  PrivacySecurity.cy.js  (+8 more)
public/: output.css
scripts/: README.md  deploy.sh  run.ps1  vbak.ps1  vbak.sh  vres.ps1  vres.sh
src/: App.tsx  LinkedInDashboard.css  LinkedInDashboard.tsx  LinkedInProfile.css  LinkedInProfile.tsx  UserProfile.tsx  ViewUsersProfile.css  ViewUsersProfile.tsx  index.tsx
store/: useNotificationStore.ts  useProfileStore.ts
template/: package.json
tests/: README.md
(+825 files in other folders)
